# a2a-cluster-bridge

./: README.md  TODO.txt  pyproject.toml
deployments/01-k8s-readonly-server/: README.md  component.yaml  deployment.yaml  rbac.yaml
deployments/02-gateway-config/: README.md  k8s-readonly-route.yaml
servers/k8s-readonly-server/: server.py
src/a2a_cluster_bridge/: __init__.py  server.py
